--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      body {
+       margin: 0;
+       padding: 0;
+      }
+    </style>
     <meta charset="utf-8">
     <title>interface-adinfo</title>
   </head>
