--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
       body {
        margin: 0;
        padding: 0;
+       font-family: 'Helvetica', sans-serif;
       }
     </style>
     <meta charset="utf-8">
     <title>interface-adinfo</title>
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
   </head>
   <body>
     <div id="app"></div>
