--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     <script src="/dist/build.js"></script>
 
     <!--   Core JS Login   -->
-    <script src="./src/components/login/assets/js/core/jquery.min.js" type="text/javascript"></script>
+    <!-- <script src="./src/components/login/assets/js/core/jquery.min.js" type="text/javascript"></script>
     <script src="./src/components/login/assets/js/core/popper.min.js" type="text/javascript"></script>
     <script src="./src/components/login/assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
-    <script src="./src/components/login/assets/js/plugins/moment.min.js"></script>
+    <script src="./src/components/login/assets/js/plugins/moment.min.js"></script> -->
     <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
-    <script src="./src/components/login/assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+    <!-- <script src="./src/components/login/assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script> -->
     <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-    <script src="./src/components/login/assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+    <!-- <script src="./src/components/login/assets/js/plugins/nouislider.min.js" type="text/javascript"></script> -->
     <!--  Google Maps Plugin    -->
     <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
-    <script src="./src/components/login/assets/js/material-kit.js?v=2.0.7" type="text/javascript"></script>
+    <!-- <script src="./src/components/login/assets/js/material-kit.js?v=2.0.7" type="text/javascript"></script> -->
   </body>
 </html>
