--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       }
     </style>
     <meta charset="utf-8">
-    <title>interface-adinfo</title>
+    <title>SAMSUNG | AdInfo</title>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
   </head>
   <body>
