--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta charset="utf-8">
     <title>SAMSUNG | AdInfo</title>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
+    <link rel="icon" href="./src/assets/tune_black_24dp.svg" type="image/icon type">
   </head>
   <body>
     <div id="app"></div>
